<?xml version="1.0" encoding="utf-8"?>

<!--This is the layout for the Profile Screen-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <RelativeLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llprofileOverview">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civProfilePic"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_temp_logo"
            android:layout_marginStart="@dimen/appSMargin"
            android:layout_marginTop="@dimen/appLMargin"
            android:layout_centerVertical="true"
            app:civ_border_width="5dp"
            app:civ_border_color="@color/colorAccentDark"
            android:translationZ="5dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/llprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appLMargin"
            android:layout_marginEnd="@dimen/appSMargin"
            android:layout_toEndOf="@id/civProfilePic"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_profile_box"
            android:orientation="vertical"
            android:padding="@dimen/appMPadding">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mainText"
                android:textSize="@dimen/textUser"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrestigeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteText"
                android:textSize="@dimen/textTitle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrestigeLvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mainText"
                android:textSize="@dimen/textPara" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/llprofileOverview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/appSPadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llHeader"
        app:layout_constraintBottom_toTopOf="@id/btnLogout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/appMMargin"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/appMPadding"
                android:weightSum="2"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/appSMargin"
                        android:text="@string/title_profile_recycle"
                        android:textAlignment="center"
                        android:textSize="@dimen/textPara" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_recycling"
                        android:contentDescription="@string/description_recycle_count"/>

                    <TextView
                        android:id="@+id/tvProfileRecyclingCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/mainText"
                        android:textSize="@dimen/textTitle"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/appSMargin"
                        android:text="@string/title_profile_wins"
                        android:textAlignment="center"
                        android:textSize="@dimen/textPara" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_sword"
                        android:contentDescription="@string/description_win_count"/>

                    <TextView
                        android:id="@+id/tvProfileWinsCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/mainText"
                        android:textSize="@dimen/textTitle"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvUsernameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/appMMargin"
                android:text="@string/label_profile_username"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llprofileOverview" />

            <TextView
                android:id="@+id/tvEditUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/appMMargin"
                android:textSize="@dimen/textPara"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUsernameLabel" />

            <TextView
                android:id="@+id/tvDistrictLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/appMMargin"
                android:text="@string/label_profile_district"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEditUsername" />

            <TextView
                android:id="@+id/tvPostalLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/appMMargin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDistrictLabel"
                android:textSize="@dimen/textPara"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/appMMargin"
        android:background="@drawable/bg_profile_box"
        android:text="@string/button_logout"
        app:layout_constraintBottom_toTopOf="@+id/nav_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <include
        layout="@layout/navigation_bar"
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>