...
                android:textColor="@color/whiteText"
                android:textSize="@dimen/textPara"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/appSMargin"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
...
